# apps/api/app/models/medication_product.ts
@@ -1,0 +1,3 @@
+import { MedicationProductSchema } from '#database/schema'
+
+export default class MedicationProduct extends MedicationProductSchema {}
